--- a/src/app/profile-page/profile-page.component.html
+++ b/src/app/profile-page/profile-page.component.html
@@ -17,10 +17,10 @@
             </div>
             <p class="c-grey m-0 fs-13">550 Rating</p>
         </div>
-        <div class="info-box w-full txt-c-mobile">
+        <div class="info-box w-100 txt-c-mobile">
             <!-- Start Information Row -->
-            <div class="box p-20 d-flex align-center">
-                <h4 class="c-grey fs-15 m-0 w-full">General Information</h4>
+            <div class="box d-flex align-items-center">
+                <h4 class="c-grey fs-15 m-0 w-100">General Information</h4>
                 <div class="fs-14">
                     <span class="c-grey">Full Name</span>
                     <span>Osama Mohamed</span>
@@ -42,8 +42,8 @@
             </div>
             <!-- End Information Row -->
             <!-- Start Information Row -->
-            <div class="box p-20 d-flex align-center">
-                <h4 class="c-grey w-full fs-15 m-0">Personal Information</h4>
+            <div class="box d-flex align-items-center">
+                <h4 class="c-grey w-100 fs-15 m-0">Personal Information</h4>
                 <div class="fs-14">
                     <span class="c-grey">Email:</span>
                     <span>o@nn.sa</span>
@@ -65,8 +65,8 @@
             </div>
             <!-- End Information Row -->
             <!-- Start Information Row -->
-            <div class="box p-20 d-flex align-center">
-                <h4 class="c-grey w-full fs-15 m-0">Job Information</h4>
+            <div class="box d-flex align-items-center">
+                <h4 class="c-grey w-100 fs-15 m-0">Job Information</h4>
                 <div class="fs-14">
                     <span class="c-grey">Title:</span>
                     <span>Full Stack Developer</span>
@@ -88,8 +88,8 @@
             </div>
             <!-- End Information Row -->
             <!-- Start Information Row -->
-            <div class="box p-20 d-flex align-center">
-                <h4 class="c-grey w-full fs-15 m-0">Billing Information</h4>
+            <div class="box d-flex align-items-center">
+                <h4 class="c-grey w-100 fs-15 m-0">Billing Information</h4>
                 <div class="fs-14">
                     <span class="c-grey">Payment Method:</span>
                     <span>Paypal</span>
@@ -131,7 +131,7 @@
         <div class="activities p-20 bg-white rad-10 mt-20">
             <h2 class="mt-0 mb-10">Latest Activities</h2>
             <p class="mt-0 mb-20 c-grey fs-15">Latest Activities Done By The User</p>
-            <div class="activity d-flex align-center txt-c-mobile">
+            <div class="activity d-flex align-items-center txt-c-mobile">
                 <img src="imgs/activity-01.png" alt="" />
                 <div class="info">
                     <span class="d-block mb-10">Store</span>
@@ -142,7 +142,7 @@
                     <span class="c-grey">Yesterday</span>
                 </div>
             </div>
-            <div class="activity d-flex align-center txt-c-mobile">
+            <div class="activity d-flex align-items-center txt-c-mobile">
                 <img src="imgs/activity-02.png" alt="" />
                 <div class="info">
                     <span class="d-block mb-10">Academy</span>
@@ -153,7 +153,7 @@
                     <span class="c-grey">Yesterday</span>
                 </div>
             </div>
-            <div class="activity d-flex align-center txt-c-mobile">
+            <div class="activity d-flex align-items-center txt-c-mobile">
                 <img src="imgs/activity-03.png" alt="" />
                 <div class="info">
                     <span class="d-block mb-10">Badges</span>
@@ -164,7 +164,7 @@
                     <span class="c-grey">Yesterday</span>
                 </div>
             </div>
-            <div class="activity d-flex align-center txt-c-mobile">
+            <div class="activity d-flex align-items-center txt-c-mobile">
                 <img src="imgs/activity-01.png" alt="" />
                 <div class="info">
                     <span class="d-block mb-10">Store</span>
