--- a/src/app/settings-page/settings-page.component.scss
+++ b/src/app/settings-page/settings-page.component.scss
@@ -1,4 +1,5 @@
 @import "../../assets/variables.scss";
+@import "../../assets/framework.scss";
 
 .settings-page {
   margin: 20px;
@@ -82,3 +83,47 @@
 .settings-page .social-boxes > div:focus-within i {
   color: black;
 }
+
+.toggle-checkbox {
+  -webkit-appearance: none ;
+  appearance: none ;
+}
+
+.toggle-switch{
+  background-color: #ccc;
+  width: 78px;
+  height: 32px;
+  border-radius: 16px;
+  position: relative;
+  transition: 0.3s;
+  cursor: pointer;
+}
+
+.toggle-switch::before {
+  font-family: var(--fa-style-family-classic);
+  content: "\f00d";
+  font-weight: 900;
+  background-color: white;
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  border-radius: 50%;
+  top: 4px;
+  left: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #aaa;
+  transition: 0.3s;
+}
+
+.toggle-checkbox:checked + .toggle-switch {
+  background-color: $blue-color;
+}
+
+.toggle-checkbox:checked + .toggle-switch::before {
+  content: "\f00c";
+  left: 50px;
+  color: var(--blue-color);
+}
+
