enhancing the project archetecture

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -9,4 +9,5 @@
             <app-top-search-widget></app-top-search-widget>
             <app-latest-uploads></app-latest-uploads>
             <app-last-progress-project></app-last-progress-project>
+            <app-projects-table></app-projects-table>
         </div>
