--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -19,7 +19,7 @@
             </a>
         </li>
         <li>
-            <a class="d-flex align-items-center text-dark" routerLink="dashboard"><i class="fa-solid fa-diagram-project"></i>
+            <a class="d-flex align-items-center text-dark" routerLink="projects"><i class="fa-solid fa-diagram-project"></i>
                 <span class="hide-mobile">Projects</span>
             </a>
         </li>
