--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,9 +25,9 @@
   outline: none;
 }
 
-// body {
-//   font-family: "Open Sans", sans-serif;
-// }
+body {
+  font-family: "Open Sans", sans-serif;
+}
 
 a {
   text-decoration: none;
