added the courses component

--- a/src/app/dashboard/projects-table/projects-table.component.scss
+++ b/src/app/dashboard/projects-table/projects-table.component.scss
@@ -1,4 +1,5 @@
 @import "../../../assets/variables.scss";
+@import "../../../assets/framework.scss";
 
 .projects .responsive-table {
   overflow-x: auto;
