--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -2,33 +2,33 @@
     <h3 class="position-relative text-center mt-0">Hamza</h3>
     <ul class="p-0 list-unstyled">
         <li>
-            <a class="active d-flex align-items-center text-dark" routerLink="dashboard"><i
+            <a class="d-flex align-items-center text-dark" routerLink="dashboard" routerLinkActive="active"><i
                     class="fa-regular fa-chart-bar fa-fw"></i>
                 <span class="hide-mobile">Dashboard</span>
             </a>
         </li>
         <li>
-            <a class="d-flex align-items-center text-dark" routerLink="settings">
+            <a class="d-flex align-items-center text-dark" routerLink="settings" routerLinkActive="active">
                 <i class="fa-sharp fa-solid fa-gear"></i>
                 <span class="hide-mobile">Settings</span>
             </a>
         </li>
         <li>
-            <a class="d-flex align-items-center text-dark" routerLink="profile"><i class="fa-regular fa-user"></i>
+            <a class="d-flex align-items-center text-dark" routerLink="profile" routerLinkActive="active"><i class="fa-regular fa-user"></i>
                 <span class="hide-mobile">Profile</span>
             </a>
         </li>
         <li>
-            <a class="d-flex align-items-center text-dark" routerLink="projects"><i class="fa-solid fa-diagram-project"></i>
+            <a class="d-flex align-items-center text-dark" routerLink="projects" routerLinkActive="active"><i class="fa-solid fa-diagram-project"></i>
                 <span class="hide-mobile">Projects</span>
             </a>
         </li>
         <li>
-            <a class="d-flex align-items-center text-dark" routerLink="dashboard"><i class="fa-solid fa-graduation-cap"></i>
+            <a class="d-flex align-items-center text-dark" routerLink="courses" routerLinkActive="active"><i class="fa-solid fa-graduation-cap"></i>
                 <span class="hide-mobile">Courses</span>
             </a>
         </li>
-        <li>
+        <!-- <li>
             <a class="d-flex align-items-center text-dark" routerLink="dashboard"><i class="fa-solid fa-user-group"></i>
                 <span class="hide-mobile">Friends</span>
             </a>
@@ -42,7 +42,7 @@
             <a class="d-flex align-items-center text-dark" routerLink="dashboard"><i class="fa-solid fa-credit-card"></i>
                 <span class="hide-mobile">Plans</span>
             </a>
-        </li>
+        </li> -->
     </ul>
 
 </div>
