--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
     <app-welcome></app-welcome>
     <app-quick-draft></app-quick-draft>
     <app-tagets-widget></app-tagets-widget>
-    <app-tweet-statistics></app-tweet-statistics>
+    <app-ticket-statistics></app-ticket-statistics>
     <app-latest-news></app-latest-news>
     <app-tasks-widget></app-tasks-widget>
     <app-top-search-widget></app-top-search-widget>
