--- a/src/app/dashboard/latest-news/latest-news.component.html
+++ b/src/app/dashboard/latest-news/latest-news.component.html
@@ -1,35 +1,11 @@
 <div class="latest-news h-100">
   <h2 class="mt-0">Latest News</h2>
-  <div class="news-row d-flex align-items-center">
-    <img src="assets/images/news-01.png" alt="" />
+  <div *ngFor="let newsRow of info" class="news-row d-flex align-items-center">
+    <img [src]="src + newsRow.image" alt="" />
     <div class="info">
-      <h3>Created SASS Section</h3>
-      <p class="m-0">New SASS Examples & Tutorials</p>
+      <h3>{{newsRow.title}}</h3>
+      <p class="m-0">{{newsRow.info}}</p>
     </div>
-    <div class="btn-shape   label">3 Days Ago</div>
-  </div>
-  <div class="news-row d-flex align-items-center">
-    <img src="assets/images/news-02.png" alt="" />
-    <div class="info">
-      <h3>Changed The Design</h3>
-      <p class="m-0">A Brand New Website Design</p>
-    </div>
-    <div class="btn-shape label">5 Days Ago</div>
-  </div>
-  <div class="news-row d-flex align-items-center">
-    <img src="assets/images/news-03.png" alt="" />
-    <div class="info">
-      <h3>Team Increased</h3>
-      <p class="m-0">3 Developers Joined The Team</p>
-    </div>
-    <div class="btn-shape   label">7 Days Ago</div>
-  </div>
-  <div class="news-row d-flex align-items-center">
-    <img src="assets/images/news-04.png" alt="" />
-    <div class="info">
-      <h3>Added Payment Gateway</h3>
-      <p class="m-0">Many New Payment Gateways Added</p>
-    </div>
-    <div class="btn-shape   label">9 Days Ago</div>
+    <div class="btn-shape label">{{newsRow.period}} Days ago</div>
   </div>
 </div>
