added the content to the friends component route

--- a/src/app/dashboard/courses/courses.component.html
+++ b/src/app/dashboard/courses/courses.component.html
@@ -21,3 +21,5 @@
         </div>
     </div>
 </div>
+
+<Button (click)="HelloTransGender('dadsadasdsadsadsa')" class="bg-danger">Delete Your Pussy</Button>
