--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -29,7 +29,7 @@
             </a>
         </li>
         <li>
-            <a class="d-flex align-items-center text-dark" routerLink="dashboard"><i class="fa-solid fa-user-group"></i>
+            <a class="d-flex align-items-center text-dark" routerLink="friends"><i class="fa-solid fa-user-group"></i>
                 <span class="hide-mobile">Friends</span>
             </a>
         </li>
