--- a/src/app/dashboard/friends/friends.component.scss
+++ b/src/app/dashboard/friends/friends.component.scss
@@ -2,50 +2,66 @@
 @import "../../../assets/variables.scss";
 
 .friends-page {
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  }
-  @media (max-width: 767px) {
-    .friends-page {
-      grid-template-columns: minmax(200px, 1fr);
-      margin-left: 10px;
-      margin-right: 10px;
-      gap: 10px;
-    }
-  }
-  .friends-page .contact {
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+
+  .contact {
     position: absolute;
     left: 10px;
     top: 10px;
+    i {
+      background-color: #eee;
+      padding: 10px;
+      border-radius: 50%;
+      color: #666;
+      font-size: 13px;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    i:hover {
+      background-color: $blue-color;
+      color: white;
+    }
   }
-  .friends-page .contact i {
-    background-color: #eee;
-    padding: 10px;
-    border-radius: 50%;
-    color: #666;
-    font-size: 13px;
-    cursor: pointer;
-    transition: 0.3s;
+
+  .avatar {
+    img {
+      width: 100px;
+    }
+
+    h4 + p {
+      margin-top: 5px;
+      font-size: 13px;
+    }
   }
-  .friends-page .contact i:hover {
-    background-color: var(--blue-color);
-    color: white;
-  }
-  .friends-page .friend .icons {
+
+  .friend .icons {
     border-top: 1px solid #eee;
     border-bottom: 1px solid #eee;
     margin-top: 15px;
     margin-bottom: 15px;
     padding-top: 15px;
     padding-bottom: 15px;
+    i {
+      margin-right: 5px;
+    }
+
+    .vip {
+      position: absolute;
+      right: 0;
+      top: 50%;
+      transform: translateY(-50%);
+      font-size: 40px;
+      opacity: 0.2;
+    }
   }
-  .friends-page .friend .icons i {
-    margin-right: 5px;
+}
+
+@media (max-width: 767px) {
+  .friends-page {
+    grid-template-columns: minmax(200px, 1fr);
+    margin-left: 10px;
+    margin-right: 10px;
+    gap: 10px;
   }
-  .friends-page .friend .icons .vip {
-    position: absolute;
-    right: 0;
-    top: 50%;
-    transform: translateY(-50%);
-    font-size: 40px;
-    opacity: 0.2;
-  }
+}
