added needed fixes to the error names

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="wraper d-grid ">
     <app-welcome></app-welcome>
     <app-quick-draft></app-quick-draft>
-    <app-tagets-widget></app-tagets-widget>
+    <app-targets-widget></app-targets-widget>
     <app-ticket-statistics></app-ticket-statistics>
     <app-latest-news></app-latest-news>
     <app-tasks-widget></app-tasks-widget>
